# JaqalPaq-extras

./: .gitlab-ci.yml  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
contrib/vim/addons/ftdetect/: jaqal.vim
contrib/vim/ftdetect/: jaqal.vim
contrib/vim/syntax/: jaqal.vim
devel/: refresh-data-files
doc/: index.rst  jaqalpaq.qiskit.rst  jaqalpaq.rst  jaqalpaq.transpilers.qiskit.rst  jaqalpaq.transpilers.rst  modules.rst
docs/: conf.py  index.rst  jaqalpaq.cirq.rst  jaqalpaq.core.rst  jaqalpaq.qiskit.rst  jaqalpaq.quil.rst
examples/Tutorials/: Transpiler_Demo.ipynb
jaqal/scheduler/: scheduler.py
jaqal/transpilers/cirq/: frontend.py
jaqal/transpilers/projectq/: __init__.py  frontend.py
jaqal/transpilers/qiskit/: __init__.py  frontend.py  gates.py  unroller.py
jaqal/transpilers/qscout/: native_gates.py
jaqal/transpilers/quil/: frontend.py  ioncompiler.py  qscoutam.py
jaqal/transpilers/tket/: frontend.py
jaqalpaq/scheduler/: __init__.py  scheduler.py
jaqalpaq/transpilers/cirq/: __init__.py  frontend.py
jaqalpaq/transpilers/projectq/: frontend.py
jaqalpaq/transpilers/qiskit/: __init__.py  frontend.py  gates.py  unroller.py
jaqalpaq/transpilers/qscout/: native_gates.py
jaqalpaq/transpilers/quil/: __init__.py  frontend.py  ioncompiler.py  qscoutam.py
jaqalpaq/transpilers/tket/: __init__.py  frontend.py
src/jaqalpaq/_backports/: __init__.py  _basisconstructors.py
src/jaqalpaq/_backports/_interpygate/: __init__.py  core.py  process_tomography.py
src/jaqalpaq/scheduler/: scheduler.py
src/jaqalpaq/transpilers/cirq/: frontend.py
src/jaqalpaq/transpilers/projectq/: __init__.py  frontend.py
src/jaqalpaq/transpilers/qiskit/: __init__.py  aer.py  frontend.py  gates.py  instance.py  unroller.py
src/jaqalpaq/transpilers/quil/: frontend.py  ioncompiler.py  qscoutam.py
src/jaqalpaq/transpilers/tket/: __init__.py  backend.py  frontend.py
test/: test_smoke.py
test/transpilers/cirq/: test_cirq_transpiler.py
test/transpilers/projectq/: test_projectq_transpiler.py
test/transpilers/qiskit/: test_qiskit_gates.py  test_qiskit_unroller.py
test/transpilers/quil/: test_quil.py
test/transpilers/tket/: test_tket_transpiler.py
tests/scheduler/: test_scheduler.py
tests/transpilers/qiskit/: test_qiskit_backend.py  test_qiskit_gates.py  test_qiskit_reverse_transpiler.py  test_qiskit_transpiler.py  test_qiskit_unroller.py
tests/transpilers/tket/: test_tket_backend.py  test_tket_reverse_transpiler.py  test_tket_transpiler.py
tools/: backport-interpygate
