[metadata]
name = JaqalPaq-extras
author = Benjamin C. A. Morrison, Jay Wesley Van Der Wall, Daniel Lobser, Antonio Russo, Kenneth Rudinger, Peter Maunz
author_email = qscout@sandia.gov
description = Python tools for Jaqal (extras)
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
version = 1.0.0rc1
home_page = https://qscout.sandia.gov
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix

[options]
packages = find:
package_dir =
    =src
install_requires = JaqalPaq==1.0.0rc1
python_requires = >=3.6.5
platforms = any

[options.packages.find]
include =
    jaqalpaq.scheduler
    jaqalpaq.transpilers
    jaqalpaq.transpilers.*
where = src

[options.extras_require]
tests = pytest
qiskit = qiskit>=0.27.0,<0.28.0; QSCOUT-gatemodels
pyquil = pyquil>=2.21.0,<3.0.0; QSCOUT-gatemodels
cirq = cirq>=0.11.0,<0.12.0; QSCOUT-gatemodels
projectq = projectq>=0.5.1,<0.7.0; QSCOUT-gatemodels
pytket = pytket>=0.5.6,<0.13.0; QSCOUT-gatemodels
tutorial = pytket-qiskit

[options.data_files]
share/vim/addons/ftdetect =
    contrib/vim/ftdetect/jaqal.vim
share/vim/addons/syntax =
    contrib/vim/syntax/jaqal.vim

[bdist_wheel]
universal = 1
