[metadata]
name = JaqalPaq-extras
author = Benjamin C. A. Morrison, Jay Wesley Van Der Wall, Daniel Lobser, Antonio Russo, Kenneth Rudinger, Peter Maunz
author_email = qscout@sandia.gov
description = Python tools for Jaqal (extras)
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
version = 1.2.0a1
home_page = https://qscout.sandia.gov
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix

[options]
packages = find_namespace:
package_dir =
    =src
install_requires = JaqalPaq==1.2.0a1; QSCOUT-gatemodels>=1.2.0a1
python_requires = >=3.6.5
platforms = any

[options.packages.find]
include =
    jaqalpaq.scheduler
    jaqalpaq.transpilers
    jaqalpaq.transpilers.*
where = src

[options.extras_require]
tests = pytest
qiskit = qiskit>=0.27.0,<0.37.0
pyquil = pyquil>=2.21.0,<3.0.0
cirq = cirq>=0.11.0,<0.15.0
projectq = projectq>=0.5.1,<0.8.0
pytket = pytket>=1.0.1,<2.0.0
tutorial = pytket-qiskit==0.24.0; qiskit-nature[pyscf]==0.3.2

[options.data_files]
share/jaqalpaq/tests =
    tests/test_smoke.py
share/jaqalpaq/tests/scheduler =
    tests/scheduler/__init__.py
    tests/scheduler/test_scheduler.py
share/jaqalpaq/tests/transpilers =
    tests/transpilers/__init__.py
share/jaqalpaq/examples/Tutorials =
    examples/Tutorials/Transpiler_Demo.ipynb
share/jaqalpaq/tests/transpilers/cirq =
    tests/transpilers/cirq/__init__.py
    tests/transpilers/cirq/test_cirq_transpiler.py
share/jaqalpaq/tests/transpilers/quil =
    tests/transpilers/quil/__init__.py
    tests/transpilers/quil/test_quil.py
share/jaqalpaq/tests/transpilers/tket =
    tests/transpilers/tket/__init__.py
    tests/transpilers/tket/test_tket_backend.py
    tests/transpilers/tket/test_tket_reverse_transpiler.py
    tests/transpilers/tket/test_tket_transpiler.py
share/jaqalpaq/tests/transpilers/qiskit =
    tests/transpilers/qiskit/__init__.py
    tests/transpilers/qiskit/test_qiskit_backend.py
    tests/transpilers/qiskit/test_qiskit_gates.py
    tests/transpilers/qiskit/test_qiskit_reverse_transpiler.py
    tests/transpilers/qiskit/test_qiskit_transpiler.py
    tests/transpilers/qiskit/test_qiskit_unroller.py
share/vim/addons/syntax =
    contrib/vim/addons/syntax/jaqal.vim
share/jaqalpaq/tests/transpilers/projectq =
    tests/transpilers/projectq/__init__.py
    tests/transpilers/projectq/test_projectq_transpiler.py
share/vim/addons/ftdetect =
    contrib/vim/addons/ftdetect/jaqal.vim
